// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components <TodoFilterLink /> TodoFilterLink should render correctly -- active link 1`] = `
<x-tab
  selected={true}
>
  <x-label>
    <span>
      Link
    </span>
  </x-label>
</x-tab>
`;

exports[`components <TodoFilterLink /> TodoFilterLink should render correctly -- all filter 1`] = `
<x-tab
  selected={null}
>
  <x-label>
    <span>
      Link
    </span>
  </x-label>
</x-tab>
`;

exports[`components <TodoFilterLink /> TodoFilterLink should render correctly -- completed filter 1`] = `
<x-tab
  selected={null}
>
  <x-label>
    <span>
      Link
    </span>
  </x-label>
</x-tab>
`;
